# ek-xmonad

./: .gitignore  default.nix  ek-xmonad.cabal  shell.nix
app/: Main.hs
nix/: sources.json
src/: KeyCodes.hs  System.hs
src/Colour/: Zenburn.hs
src/System/: Bindings.hs  Colour.hs  Hooks.hs  XMobar.hs  XMonad.hs
